added new features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.data.mongodb.uri=mongodb+srv://asiva494:test1234@cluster0.qmppuoe.mongodb
 scheduling.interval=30000
 #batch.time = 30000
 dynamic.fixedRate=60000
+management.endpoints.web.exposure.include=health,info
 
