--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,29 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0</version>
 			</plugin>
+			<plugin>
+				<groupId>io.github.git-commit-id</groupId>
+				<artifactId>git-commit-id-maven-plugin</artifactId>
+				<version>5.0.0</version>
+				<executions>
+					<execution>
+						<id>get-the-git-infos</id>
+						<goals>
+							<goal>revision</goal>
+						</goals>
+						<phase>initialize</phase>
+					</execution>
+				</executions>
+				<configuration>
+					<generateGitPropertiesFile>true</generateGitPropertiesFile>
+					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+<!--					<includeOnlyProperties>-->
+<!--						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>-->
+<!--						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>-->
+<!--					</includeOnlyProperties>-->
+<!--					<commitIdGenerationMode>full</commitIdGenerationMode>-->
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
