--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ scheduling.interval=30000
 #batch.time = 30000
 dynamic.fixedRate=60000
 management.endpoints.web.exposure.include=health,info
+spring.thymeleaf.check-template-location=false
 
